--- a/back/src/ProEventos.API/ProEventos.API.csproj
+++ b/back/src/ProEventos.API/ProEventos.API.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
